--- a/index.html
+++ b/index.html
@@ -8,6 +8,8 @@
 <body>
     <h1>Adding remote origin and pushing existing code to remote repo</h1>
     <p>Git Demo</p>
+    <div></div>
+    <h2></h2>
 </body>
 
 </html>
